ckanext/dgu/theme/src/css/dgu-ckan.less
/* ... */
img.open-government-licence {
    margin-top: -5px;
    height: 12px;
}
.pagination {
    text-align: center;
}
a.tag {
    color: #333;
    font-size: 11px;
    background: lighten(#A4DF45,10%);
    margin: 0 5px 2px 5px;
    padding: 2px 5px 2px 8px;
    float: left;
    white-space: nowrap;
    .rounded(3px);
    &:hover {
      text-decoration: none;
      background: lighten(#470,10%);
      color: #fff;
    }
}
.pre-notes {
  color: #555;
}
.license-read-more {
  display: none;
}
.notes {
    color: #555;
    .notes-read-more {
      margin-top: 7px;
      display: none;
      text-align: center;
      color: #000;
    }
}
.wrap-icon {
  display: inline-block;
  zoom: 1;
  *display: inline;
  width: 30px;
  text-align: center;
}
.licenses {
    margin-bottom: 10px;
    padding-left: 8px;
}
h1 .abbreviation {
    color: #888;
}

.table-dgu-fixed-size {
    table-layout: fixed;
}
.table-dgu-fixed-size td {
    overflow: hidden;
    white-space: nowrap;
}
.table-dgu-fixed-size td.dataset-details {
    white-space: normal;
    word-wrap: break-word;
}
button span {
    white-space: nowrap;
}
ul.arrow-list {
    list-style-image: url('/images/arrow-list.png');
}
ul.green-bullet {
    list-style-image: url('/images/bullet-green.png');
}
.pagination ul {
    background: #fff;
}
p.field_error,
span.field_error {
    background: transparent url(../images/icons/error.png) left center no-repeat;
    padding-left: 20px;
    color: #FF6666;
    display: inline;
}
.hints {
    font-style: italic;
    color: #666;
    margin-top: 3px;
    margin-bottom: 0;
}
.instructions {
    &.basic {
        margin: 3px 0;
        line-height: 14px;
    }
    &.further {
        font-size: 11px;
        line-height: 12px;
        color: #666;
        margin: 3px 0 5px 0;
        width: 80%;
    }
}
ul.button-row {
    margin-bottom: 5px;
    li {
        display: inline;
        margin-right: 10px;
    }
}
#publisher-tree {
    /* publisher/index and publisher/read */
    background-color: white;
    .jstree ul {
        list-style-image: none;
    }
}
.tags ul li {
    display: inline;
    border: 1px;
}
.widget-container {
    ul.tags,
    ul.groups {
        list-style-image: none;
        list-style: none;
        margin-left: 0;
    }
}
.format-box {
  display: inline-block;
  zoom: 1;
  *display: inline;
  background: #ccc;
  color: #fff;
  font-size: 10px;
  line-height: 12px;
  padding: 3px 9px;
}
.ckan-login-form {
  label {
    font-weight: normal;
    width: 130px;
    text-align: right;
    padding-right: 10px;
  }
  .form-actions {
    padding: 10px 0 10px 25px;
  }
}


/* Table Sorter */
/* ------------ */
table.tablesorter {
    thead th.headerSortUp {
        background-image: url('/images/icons/sort-asc.gif');
        background-color: #eee;
    }
    thead th.headerSortDown {
        background-image: url('/images/icons/sort-desc.gif');
        background-color: #eee;
    }
    th.header {
        background-image: url('/images/icons/sort.gif');
        cursor: pointer;
        font-weight: bold;
        background-repeat: no-repeat;
        background-position: center right;
        padding: 3px 9px;
        padding-right: 20px;
        border-right: 1px solid #dad9c7;
        margin-left: -1px;
    }
}


/* Shopping Basket */
/* --------------- */
#shopping-basket-container {
    display: none;
    background: #fff;
    padding-top: 14px;
    padding-bottom: 14px;
    margin-bottom: 30px;
    margin-right: -15px;
    padding-right: 15px;
    #shopping-basket-reset {
      color: #777;
      margin-top: -3px;
      &:hover {
        color: #000;
        text-decoration: none;
      }
    }
    #shopping-basket-submit {
      margin-top: 10px;
      margin-left: 20px;
      width: 180px;
    }
    .facet-option {
      background-color: #E4F0FE;
      border-left-color: #529CFD;
      .facet-kill  i {
        color: #529CFD;
      }
    }
}



/* Facet Menu */
/* ---------- */
.facet-filters {
    @media(max-width: 991px) {
        z-index: 200;
        position: absolute;
        width: 80%;
        left: -82%;
        top: 300px;
        background: #333;
        padding-top: 50px;
        padding-bottom: 50px;
        .box-shadow(2px 2px 8px rgba(0,0,0,0.4));
        .border-radius(25px,25px,0,0);
        -webkit-transition: left 0.25s ease;
        -moz-transition: left 0.25s ease;
        -o-transition: left 0.25s ease;
        -ms-transition: left 0.25s ease;
        &.in {
          left: 0;
        }
    }
    .hide-facets {
      display: block;
      text-align: right;
      padding-right: 20px;
      margin-bottom: 20px;
      color: #aaa;
      &:hover { color: #fff; text-decoration: none; }
    }
}
/* ... */

